force-app/src/objects/OrderApi__Custom_Payment_Type__c.object
<CustomObject>
    <description>Represents additional payment types for the related stores.</description>
    <fields>
        <fullName>OrderApi__Custom_Payment_Type_Template__c</fullName>
        <description>Defines the name of the custom metadata type used for this Payment Type</description>
        <inlineHelpText>Defines the name of the custom metadata type used for this Payment Type</inlineHelpText>
        <label>Payment Type Template</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_On_Backend_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related custom payment type is displayed on the backend payment page.</description>
        <inlineHelpText>When checked, the related custom payment type is displayed on the backend payment page.</inlineHelpText>
        <label>Display on Backend Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_On_Frontend_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related custom payment type is displayed on the frontend checkout page.</description>
        <inlineHelpText>When checked, the related custom payment type is displayed on the frontend checkout page.</inlineHelpText>
        <label>Display on Frontend Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Order__c</fullName>
        <description>Display order number of the related payment type for the frontend payment type tabs.</description>
        <inlineHelpText>Display order number of the related payment type for the frontend payment type tabs.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Instructions__c</fullName>
        <description>The text inserted here will display in the portal when the user selects this payment type.</description>
        <inlineHelpText>The text inserted here will display in the portal when the user selects this payment type.</inlineHelpText>
        <label>Instructions</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related custom payment type is enabled.</description>
        <inlineHelpText>When checked, the related custom payment type is enabled.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Test_Gateway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related custom payment type is displayed on the frontend checkout page.</description>
        <inlineHelpText>When checked, the related custom payment type is displayed on the frontend checkout page.</inlineHelpText>
        <label>Display on Frontend Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to the related payment gateway.</description>
        <inlineHelpText>Linked to the related payment gateway.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Payment Types</relationshipLabel>
        <relationshipName>Custom_Payment_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>**Required** Linked to the related store.</description>
        <inlineHelpText>**Required** Linked to the related store.</inlineHelpText>
        <label>Store</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipLabel>Payment Types</relationshipLabel>
        <relationshipName>Custom_Payment_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Payment Type</label>
    <nameField>
        <label>Payment Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>